# claude-code-plugins

./: README.md
.claude-plugin/: marketplace.json
plugins/ai-tool-use-validator/: README.md  pyproject.toml
plugins/ai-tool-use-validator/.claude-plugin/: plugin.json
plugins/ai-tool-use-validator/hooks/: hooks.json
plugins/ai-tool-use-validator/src/claude_code_tool_use_validator/: __init__.py  cli.py
plugins/gemini-cli/: README.md
plugins/gemini-cli/.claude-plugin/: plugin.json
plugins/glab-mr/: README.md
plugins/glab-mr-fullstate/: README.md
plugins/glab-mr-fullstate/.claude-plugin/: plugin.json
plugins/glab-mr-fullstate/commands/: fix.md
plugins/glab-mr/.claude-plugin/: plugin.json
plugins/glab-mr/commands/: comments.md  fix-all.md  fix-comments.md  fix-pipeline.md  fix.md  pipeline.md
plugins/glab-mr/scripts/: fetch-mr-state.sh
plugins/gogcli/: README.md
plugins/gogcli/.claude-plugin/: plugin.json
plugins/llm-toto/: README.md
plugins/llm-toto/.claude-plugin/: plugin.json
plugins/llm-toto/docs/: bash-tool-patterns.md  design.md  rtk-comparison.md  token-cost-analysis.md
plugins/llm-toto/hooks/: hooks.json  rewrite-bash.py
plugins/llm-toto/scripts/: llm-toto.py
plugins/llm-toto/tests/: test_llm_toto.py  test_rewrite.py
plugins/markitdown/: README.md
plugins/markitdown/.claude-plugin/: plugin.json
plugins/metabasecli/: README.md
plugins/migrate-to-uv/: README.md
plugins/no-background-tasks/: README.md
plugins/skill-keyword-reminder/: README.md
plugins/slackcli/: README.md
plugins/web-researcher/: README.md
(+31 files in other folders)
